# homebrew-photo-selector-toolbox

./: .firebaserc  .flake8  .gitignore  AGENTS.md  ANDROID_CLOUD_SETUP.md  ANDROID_CLOUD_SETUP_INSTRUCTIONS.md  ANDROID_DESIGN.md  ANDROID_ISOLATION_RUNBOOK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_INTEGRATION.md  GEMINI.md  README.md  REQUIREMENTS.md  SECURITY.md  THIRDPARTY_NOTICES.txt  benchmark.db  benchmark_cache.py  benchmark_exif.py  benchmark_preview.py  benchmark_rglob_vs_walk_full.py  branch_info4.txt  branch_info5.txt  commit_message.txt  commit_note.txt  debug_patch.py  dummy.py  dummy2.py  fix2.patch  fix_tests.sh  format.sh  get_comments.py  patch.diff  patch_final.diff  patch_real_final.diff  patch_real_final2.diff  patch_tests.py  patch_tests_gui.py  (+24 more)
.Jules/: palette.md
.agents/: android_build_agent.md  android_core_agent.md  android_ui_agent.md  backend_agent.md  build_agent.md  code_health_agent.md  gui_agent.md  mentor_agent.md  photo_researcher_agent.md  publish_agent.md  test_agent.md  ux_agent.md
.claude/: settings.json
.gemini/: settings.json
.github/: pull_request_template.md
.jules/: bolt.md  code_health.md  palette.md  pre_commit.md  sentinel.md  test_agent.md
Casks/: photo-selector-toolbox.rb  photo-selector-toolbox@nightly.rb
Formula/: photo-selector-toolbox.rb  photo-selector-toolbox@nightly.rb
android/: gradle.properties  settings.gradle.kts
assets/: logo.icns
benchmarks/: benchmark_cli_metadata_extraction.py  benchmark_duplicates.py  benchmark_duplicates_loop_overhead.py  benchmark_find_duplicates.py  benchmark_find_related_files.py  benchmark_grouping_cache.py  benchmark_preview.py  benchmark_scan.py  (+4 more)
(+281 files in other folders)
