[project]
name = "photo-selector-toolbox"
version = "0.2.0"
description = "A tool to analyze image metadata and provide statistics."
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "exifread (>=3.5.1,<4.0.0)",
    "pyexiftool (>=0.5.6,<0.6.0)",
    "send2trash (>=2.0.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "rawpy (>=0.23.2)",
    "numpy (>=2.0.0)"
]

[project.scripts]
photo-selector-toolbox = "photo_selector_toolbox.cli:main"
photo-selector-gui = "photo_selector_toolbox.gui:main"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "pip-licenses (>=5.5.0,<6.0.0)",
    "xvfbwrapper (>=0.2.21,<0.3.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pixelmatch (>=0.3.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
markers = [
  "linux_only: skip unless running on Linux",
  "mac_only: skip unless running on macOS",
  "windows_only: skip unless running on Windows",
  "gui_required: skip when no display is available",
  "visual: visual regression tests requiring a display",
]

[tool.coverage.run]
source = ["photo_selector_toolbox"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
]

